# entanglenet

./: .clang-format  .cmake-format.yaml  .gitignore  .lefthook.yml  .neocmakelint.toml  .wakatime-project  CMakeLists.txt  Justfile  README.md  justfile
.github/: CODEOWNERS  funding.yml
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt  main.cpp
cmake/: ClangTidy.cmake  Prelude.cmake  ProjectDependencies.cmake  ProjectOptions.cmake  ProjectSettings.cmake  StaticAnalyzers.cmake
docs/: index.md
docs/design/: index.md  prs-initial.md  srs-initial.md
docs/meeting/: 250409-design-0.md  index.md
src/: CMakeLists.txt
